--- a/.github/workflows/vmd.yml
+++ b/.github/workflows/vmd.yml
@@ -27,5 +27,5 @@ jobs:
           node-version: '20'
 
       - name: Vue Mess Detector Analysis
-        uses: brenoepics/vmd-action@v0.0.1
+        uses: brenoepics/vmd-action@main
       
