--- a/.github/workflows/vmd.yml
+++ b/.github/workflows/vmd.yml
@@ -28,4 +28,6 @@ jobs:
 
       - name: Vue Mess Detector Analysis
         uses: brenoepics/vmd-action@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       
