--- a/.github/workflows/vmd.yml
+++ b/.github/workflows/vmd.yml
@@ -27,5 +27,7 @@ jobs:
           node-version: '20'
 
       - name: Vue Mess Detector Analysis
-        uses: brenoepics/vmd-action@main
+        uses: brenoepics/vmd-action@v0.0.6
+        with:
+            packageManager: 'pnpm'
       
