--- a/.github/workflows/vmd.yml
+++ b/.github/workflows/vmd.yml
@@ -1,4 +1,4 @@
-name: Vue Analysis 0
+name: VMD Analysis
 
 on:
   workflow_dispatch:
@@ -21,14 +21,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          run_install: false
+
+      - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
           cache: 'pnpm'
 
       - name: Vue Mess Detector Analysis
         uses: brenoepics/vmd-action@v0.0.6
         with:
-            packageManager: 'pnpm'
-      
+          packageManager: 'pnpm'
