--- a/.github/workflows/vmd.yml
+++ b/.github/workflows/vmd.yml
@@ -25,6 +25,7 @@ jobs:
         name: Install pnpm
         with:
           run_install: false
+          version: 'latest' # delete this line if you have packageManager defined in package.json
 
       - name: Install Node.js
         uses: actions/setup-node@v4
