--- a/.github/workflows/vmd.yml
+++ b/.github/workflows/vmd.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
 
       - uses: pnpm/action-setup@v4
-        name: Install pnpm
+        name: Instal pnpm
         with:
           version: 'latest' # delete this line if you have packageManager defined in package.json
 
